[package]
name = "fitsdk"
version = "0.1.0"
authors = ["Richard Brodie <richard@radagast.nu>"]
license = "MIT"
description = "A small crate which provides a simple API exposing the FIT SDK."
documentation = "https://docs.rs/fitsdk"
repository = "https://github.com/richardbrodie/fitsdk-rs"
edition = "2018"
sdk_version = "21.54.01"

[dependencies]
